--- a/my-great-book.html
+++ b/my-great-book.html
@@ -145,14 +145,17 @@ eBookConfig.enable_chatcodes =  false;
 <div id="ptx-sidebar" class="ptx-sidebar"><nav id="ptx-toc" class="ptx-toc depth2 focused" data-preexpanded-levels="0" data-max-levels="2"><ul class="structural toc-item-list contains-active">
 <li class="toc-item toc-frontmatter"><div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></div></li>
 <li class="toc-item toc-chapter">
-<div class="toc-title-box"><a href="ch-chapter-title.html" class="internal"><span class="codenumber">1</span> <span class="title">Chapter Title</span></a></div>
-<ul class="structural toc-item-list"><li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-section-name.html" class="internal"><span class="codenumber">1.1</span> <span class="title">Section Title</span></a></div></li></ul>
+<div class="toc-title-box"><a href="ch-welcome.html" class="internal"><span class="codenumber">1</span> <span class="title">Welcome to calculus!</span></a></div>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-welcome-what-is-calculus.html" class="internal"><span class="codenumber">1.1</span> <span class="title">What is calculus?</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-welcome-differentials.html" class="internal"><span class="codenumber">1.2</span> <span class="title">Differentials</span></a></div></li>
+</ul>
 </li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="book" id="my-great-book"><nav class="summary-links"><ul>
 <li><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></li>
-<li><a href="ch-chapter-title.html" class="internal"><span class="codenumber">1</span> <span class="title">Chapter Title</span></a></li>
+<li><a href="ch-welcome.html" class="internal"><span class="codenumber">1</span> <span class="title">Welcome to calculus!</span></a></li>
 <li><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></li>
 </ul></nav><div class="autopermalink" data-description="Book: Calculus: Small Changes, Big Ideas"><a href="#my-great-book" title="Copy heading and permalink for Book: Calculus: Small Changes, Big Ideas" aria-label="Copy heading and permalink for Book: Calculus: Small Changes, Big Ideas">🔗</a></div></section></div>
 <div id="ptx-content-footer" class="ptx-content-footer">
