--- a/sec-welcome-what-is-calculus.html
+++ b/sec-welcome-what-is-calculus.html
@@ -149,7 +149,7 @@ eBookConfig.enable_chatcodes =  false;
 <ul class="structural toc-item-list contains-active">
 <li class="toc-item toc-section active"><div class="toc-title-box"><a href="sec-welcome-what-is-calculus.html" class="internal"><span class="codenumber">1.1</span> <span class="title">What is calculus?</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-welcome-differentials.html" class="internal"><span class="codenumber">1.2</span> <span class="title">Differentials</span></a></div></li>
-<li class="toc-item toc-reading-questions"><div class="toc-title-box"><a href="ch-welcome-intro-5.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Check your understanding</span></a></div></li>
+<li class="toc-item toc-reading-questions"><div class="toc-title-box"><a href="sec-welcome-reading-questions.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Check your understanding</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
