--- a/welcome-sec-differentials.html
+++ b/welcome-sec-differentials.html
@@ -14,7 +14,7 @@
 <!--******************************************-->
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Welcome to calculus!</title>
+<title>Differentials</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
@@ -129,7 +129,7 @@ eBookConfig.enable_chatcodes =  false;
 <ol id="searchresults" class="searchresults"></ol>
 </div>
 </div>
-<span class="nav-other-controls"><button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="front-colophon.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="calculus-scbi.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="sec-welcome-what-is-calculus.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
+<span class="nav-other-controls"><button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="welcome-sec-what-is-calculus.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="welcome.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="welcome-reading-questions.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
 </div></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\newcommand{\N}{\mathbb N}
 \newcommand{\Z}{\mathbb Z}
 \newcommand{\Q}{\mathbb Q}
@@ -145,26 +145,23 @@ eBookConfig.enable_chatcodes =  false;
 <div id="ptx-sidebar" class="ptx-sidebar"><nav id="ptx-toc" class="ptx-toc depth2 focused" data-preexpanded-levels="0" data-max-levels="2"><ul class="structural toc-item-list contains-active">
 <li class="toc-item toc-frontmatter"><div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></div></li>
 <li class="toc-item toc-chapter contains-active">
-<div class="toc-title-box"><a href="ch-welcome-intro.html" class="internal"><span class="codenumber">1</span> <span class="title">Welcome to calculus!</span></a></div>
-<ul class="structural toc-item-list active">
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-welcome-what-is-calculus.html" class="internal"><span class="codenumber">1.1</span> <span class="title">What is calculus?</span></a></div></li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-welcome-differentials.html" class="internal"><span class="codenumber">1.2</span> <span class="title">Differentials</span></a></div></li>
-<li class="toc-item toc-reading-questions"><div class="toc-title-box"><a href="sec-welcome-reading-questions.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Check your understanding</span></a></div></li>
+<div class="toc-title-box"><a href="welcome.html" class="internal"><span class="codenumber">1</span> <span class="title">Welcome to calculus!</span></a></div>
+<ul class="structural toc-item-list contains-active">
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="welcome-sec-what-is-calculus.html" class="internal"><span class="codenumber">1.1</span> <span class="title">What is calculus?</span></a></div></li>
+<li class="toc-item toc-section active"><div class="toc-title-box"><a href="welcome-sec-differentials.html" class="internal"><span class="codenumber">1.2</span> <span class="title">Differentials</span></a></div></li>
+<li class="toc-item toc-reading-questions"><div class="toc-title-box"><a href="welcome-reading-questions.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Check your understanding</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
-<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="chapter" id="ch-welcome-intro"><h2 class="heading">
-<span class="type">Chapter</span><span class="space"> </span><span class="codenumber">1</span><span class="space"> </span><span class="title">Welcome to calculus!</span>
+<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="welcome-sec-differentials"><h2 class="heading hide-type">
+<span class="type">Section</span><span class="space"> </span><span class="codenumber">1.2</span><span class="space"> </span><span class="title">Differentials</span>
 </h2>
-<section class="introduction" id="ch-welcome-intro-2"><div class="para" id="ch-welcome-intro-2-1">Insert introductory text here.<div class="autopermalink" data-description="Paragraph"><a href="#ch-welcome-intro-2-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
-</div></section><nav class="summary-links"><ul>
-<li><a href="sec-welcome-what-is-calculus.html" class="internal"><span class="codenumber">1.1</span> <span class="title">What is calculus?</span></a></li>
-<li><a href="sec-welcome-differentials.html" class="internal"><span class="codenumber">1.2</span> <span class="title">Differentials</span></a></li>
-<li><a href="sec-welcome-reading-questions.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Check your understanding</span></a></li>
-</ul></nav><div class="autopermalink" data-description="Chapter 1: Welcome to calculus!"><a href="#ch-welcome-intro" title="Copy heading and permalink for Chapter 1: Welcome to calculus!" aria-label="Copy heading and permalink for Chapter 1: Welcome to calculus!">🔗</a></div></section></div>
+<div class="para" id="welcome-sec-differentials-2">Put some things here about differentials.<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-differentials-2" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Section 1.2: Differentials"><a href="#welcome-sec-differentials" title="Copy heading and permalink for Section 1.2: Differentials" aria-label="Copy heading and permalink for Section 1.2: Differentials">🔗</a></div></section></div>
 <div id="ptx-content-footer" class="ptx-content-footer">
-<a class="previous-button button" href="front-colophon.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="sec-welcome-what-is-calculus.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
+<a class="previous-button button" href="welcome-sec-what-is-calculus.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="welcome-reading-questions.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
 </div>
 <div id="ptx-page-footer" class="ptx-page-footer">
