--- a/welcome-sec-a-motivating-example.html
+++ b/welcome-sec-a-motivating-example.html
@@ -14,7 +14,7 @@
 <!--******************************************-->
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Backmatter</title>
+<title>A motivating example</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
@@ -129,7 +129,7 @@ eBookConfig.enable_chatcodes =  false;
 <ol id="searchresults" class="searchresults"></ol>
 </div>
 </div>
-<span class="nav-other-controls"><button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="welcome-exercises.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="calculus-scbi.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="backmatter-2.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
+<span class="nav-other-controls"><button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="welcome-sec-what-is-calculus.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="welcome.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="welcome-reading-questions.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
 </div></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\newcommand{\N}{\mathbb N}
 \newcommand{\Z}{\mathbb Z}
 \newcommand{\Q}{\mathbb Q}
@@ -144,20 +144,70 @@ eBookConfig.enable_chatcodes =  false;
 <div class="ptx-page">
 <div id="ptx-sidebar" class="ptx-sidebar"><nav id="ptx-toc" class="ptx-toc depth2 focused" data-preexpanded-levels="0" data-max-levels="2"><ul class="structural toc-item-list contains-active">
 <li class="toc-item toc-frontmatter"><div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></div></li>
-<li class="toc-item toc-chapter">
+<li class="toc-item toc-chapter contains-active">
 <div class="toc-title-box"><a href="welcome.html" class="internal"><span class="codenumber">1</span> <span class="title">Welcome to calculus!</span></a></div>
-<ul class="structural toc-item-list">
+<ul class="structural toc-item-list contains-active">
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="welcome-sec-what-is-calculus.html" class="internal"><span class="codenumber">1.1</span> <span class="title">What is calculus?</span></a></div></li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="welcome-sec-a-motivating-example.html" class="internal"><span class="codenumber">1.2</span> <span class="title">A motivating example</span></a></div></li>
+<li class="toc-item toc-section active"><div class="toc-title-box"><a href="welcome-sec-a-motivating-example.html" class="internal"><span class="codenumber">1.2</span> <span class="title">A motivating example</span></a></div></li>
 <li class="toc-item toc-reading-questions"><div class="toc-title-box"><a href="welcome-reading-questions.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Check your understanding</span></a></div></li>
 <li class="toc-item toc-exercises"><div class="toc-title-box"><a href="welcome-exercises.html" class="internal"><span class="codenumber">1.4</span> <span class="title">Exercises</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-backmatter active"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
+<li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
-<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="backmatter" id="backmatter"><nav class="summary-links"><ul><li><a href="backmatter-2.html" class="internal"><span class="title">Colophon</span></a></li></ul></nav><div class="autopermalink" data-description="Back Matter: Backmatter"><a href="#backmatter" title="Copy heading and permalink for Back Matter: Backmatter" aria-label="Copy heading and permalink for Back Matter: Backmatter">🔗</a></div></section></div>
+<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="welcome-sec-a-motivating-example"><h2 class="heading hide-type">
+<span class="type">Section</span><span class="space"> </span><span class="codenumber">1.2</span><span class="space"> </span><span class="title">A motivating example</span>
+</h2>
+<div class="para" id="welcome-sec-a-motivating-example-2">Let’s look at a simple example that you’ve probably taken for granted: the formula for the area of a circle. You know that the area is given by the formula <span class="process-math">\(A = \pi r^2\text{,}\)</span> where <span class="process-math">\(r\)</span> is the radius. But how do we arrive at this formula? How can we understand it in a way that makes sense without just memorizing it?<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-a-motivating-example-2" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="para" id="welcome-sec-a-motivating-example-3">One way we can start to understand this is by thinking of the circle as being made of many tiny pieces. Imagine that the circle is made up of some number of thin concentric rings, like the layers of an onion. Each ring has a very small width, and if we add up the areas of all these rings, we can get an approximation for the area of the circle.<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-a-motivating-example-3" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="para" id="welcome-sec-a-motivating-example-4">For example, suppose we chop the circle into four thin rings. If we slice through one radius of the circle as shown and let the rings ‘flop’ out, we can see that each ring is like a tiny rectangle with a height equal to the circumference of the circle at that radius and a width equal to the thickness of the ring. The area of each ring can be approximated as the circumference times the width, as shown in the figure below.<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-a-motivating-example-4" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="para" id="welcome-sec-a-motivating-example-5">(Placeholder for figure showing rings)<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-a-motivating-example-5" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="para" id="welcome-sec-a-motivating-example-6">As we make the rings thinner and thinner, we can see that the shape we get is looking more and more like a triangle:<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-a-motivating-example-6" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="para" id="welcome-sec-a-motivating-example-7">(Placeholder for figure showing rings approximating a triangle)<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-a-motivating-example-7" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="para logical" id="welcome-sec-a-motivating-example-8">
+<div class="para">Now here’s the key insight: what if we had an infinite number of these infinitesimally thin rings? In this case, the shape we get would be indistinguishable from a triangle, and we could use the formula for the area of a triangle to find the area of the circle. The area of a triangle is given by:</div>
+<div class="displaymath process-math">
+\begin{equation*}
+A = \frac{1}{2} \cdot \text{base} \cdot \text{height}
+\end{equation*}
+</div>
+<div class="para">Here, the base is the circumference of the circle (which is <span class="process-math">\(2\pi r\)</span>) and the height is the radius (<span class="process-math">\(r\)</span>). So we can write the area of the circle as:</div>
+<div class="displaymath process-math">
+\begin{equation*}
+A = \frac{1}{2} \cdot (2\pi r) \cdot r = \pi r^2
+\end{equation*}
+</div>
+<div class="para">This is exactly the formula we know!</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-a-motivating-example-8" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="para logical" id="welcome-sec-a-motivating-example-9">
+<div class="para">Now, while this gave the answer we expected, there are some important questions that we can raise:</div>
+<ul class="disc" id="welcome-sec-a-motivating-example-9-1">
+<li id="welcome-sec-a-motivating-example-9-1-1">
+<div class="para" id="p-derived-welcome-sec-a-motivating-example-9-1-1">How do we know that the area of the circle is actually equal to the area of this triangle?</div>
+<div class="autopermalink" data-description="Item"><a href="#welcome-sec-a-motivating-example-9-1-1" title="Copy heading and permalink for Item" aria-label="Copy heading and permalink for Item">🔗</a></div>
+</li>
+<li id="welcome-sec-a-motivating-example-9-1-2">
+<div class="para" id="p-derived-welcome-sec-a-motivating-example-9-1-2">What happens if we try to apply this reasoning to other shapes?</div>
+<div class="autopermalink" data-description="Item"><a href="#welcome-sec-a-motivating-example-9-1-2" title="Copy heading and permalink for Item" aria-label="Copy heading and permalink for Item">🔗</a></div>
+</li>
+<li id="welcome-sec-a-motivating-example-9-1-3">
+<div class="para" id="p-derived-welcome-sec-a-motivating-example-9-1-3">How can we formalize this idea of adding up infinitely many tiny pieces?</div>
+<div class="autopermalink" data-description="Item"><a href="#welcome-sec-a-motivating-example-9-1-3" title="Copy heading and permalink for Item" aria-label="Copy heading and permalink for Item">🔗</a></div>
+</li>
+</ul>
+<div class="para">If you’re a bit skeptical about this reasoning, that’s a good thing! The goal of calculus is to provide a rigorous framework for answering these questions.</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-a-motivating-example-9" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Section 1.2: A motivating example"><a href="#welcome-sec-a-motivating-example" title="Copy heading and permalink for Section 1.2: A motivating example" aria-label="Copy heading and permalink for Section 1.2: A motivating example">🔗</a></div></section></div>
 <div id="ptx-content-footer" class="ptx-content-footer">
-<a class="previous-button button" href="welcome-exercises.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="backmatter-2.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
+<a class="previous-button button" href="welcome-sec-what-is-calculus.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="welcome-reading-questions.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
 </div>
 <div id="ptx-page-footer" class="ptx-page-footer">
