--- a/frontmatter.html
+++ b/frontmatter.html
@@ -148,7 +148,9 @@ eBookConfig.enable_chatcodes =  false;
 <div class="toc-title-box"><a href="welcome.html" class="internal"><span class="codenumber">1</span> <span class="title">Welcome to calculus!</span></a></div>
 <ul class="structural toc-item-list">
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="welcome-sec-what-is-calculus.html" class="internal"><span class="codenumber">1.1</span> <span class="title">What is calculus?</span></a></div></li>
-<li class="toc-item toc-reading-questions"><div class="toc-title-box"><a href="welcome-reading-questions.html" class="internal"><span class="codenumber">1.2</span> <span class="title">Check your understanding</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="welcome-sec-a-motivating-example.html" class="internal"><span class="codenumber">1.2</span> <span class="title">A motivating example</span></a></div></li>
+<li class="toc-item toc-reading-questions"><div class="toc-title-box"><a href="welcome-reading-questions.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Check your understanding</span></a></div></li>
+<li class="toc-item toc-exercises"><div class="toc-title-box"><a href="welcome-exercises.html" class="internal"><span class="codenumber">1.4</span> <span class="title">Exercises</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
@@ -158,7 +160,7 @@ eBookConfig.enable_chatcodes =  false;
 <div class="author-name">Bill Shillito</div>
 <div class="author-info">Division IX<br>Oglethorpe University</div>
 </div>
-<div class="date">July 29, 2025</div>
+<div class="date">July 30, 2025</div>
 <nav class="summary-links"><ul><li><a href="front-colophon.html" class="internal"><span class="title">Colophon</span></a></li></ul></nav><div class="autopermalink" data-description="Front Matter"><a href="#frontmatter" title="Copy heading and permalink for Front Matter" aria-label="Copy heading and permalink for Front Matter">🔗</a></div></section></div>
 <div id="ptx-content-footer" class="ptx-content-footer">
 <a class="previous-button button" href="calculus-scbi.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="front-colophon.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
