--- a/welcome-exercises.html
+++ b/welcome-exercises.html
@@ -14,7 +14,7 @@
 <!--******************************************-->
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Backmatter</title>
+<title>Exercises</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
@@ -129,7 +129,7 @@ eBookConfig.enable_chatcodes =  false;
 <ol id="searchresults" class="searchresults"></ol>
 </div>
 </div>
-<span class="nav-other-controls"><button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="welcome-exercises.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="calculus-scbi.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="backmatter-2.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
+<span class="nav-other-controls"><button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="welcome-reading-questions.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="welcome.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="backmatter.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
 </div></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\newcommand{\N}{\mathbb N}
 \newcommand{\Z}{\mathbb Z}
 \newcommand{\Q}{\mathbb Q}
@@ -144,20 +144,44 @@ eBookConfig.enable_chatcodes =  false;
 <div class="ptx-page">
 <div id="ptx-sidebar" class="ptx-sidebar"><nav id="ptx-toc" class="ptx-toc depth2 focused" data-preexpanded-levels="0" data-max-levels="2"><ul class="structural toc-item-list contains-active">
 <li class="toc-item toc-frontmatter"><div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></div></li>
-<li class="toc-item toc-chapter">
+<li class="toc-item toc-chapter contains-active">
 <div class="toc-title-box"><a href="welcome.html" class="internal"><span class="codenumber">1</span> <span class="title">Welcome to calculus!</span></a></div>
-<ul class="structural toc-item-list">
+<ul class="structural toc-item-list contains-active">
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="welcome-sec-what-is-calculus.html" class="internal"><span class="codenumber">1.1</span> <span class="title">What is calculus?</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="welcome-sec-a-motivating-example.html" class="internal"><span class="codenumber">1.2</span> <span class="title">A motivating example</span></a></div></li>
 <li class="toc-item toc-reading-questions"><div class="toc-title-box"><a href="welcome-reading-questions.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Check your understanding</span></a></div></li>
-<li class="toc-item toc-exercises"><div class="toc-title-box"><a href="welcome-exercises.html" class="internal"><span class="codenumber">1.4</span> <span class="title">Exercises</span></a></div></li>
+<li class="toc-item toc-exercises active"><div class="toc-title-box"><a href="welcome-exercises.html" class="internal"><span class="codenumber">1.4</span> <span class="title">Exercises</span></a></div></li>
 </ul>
 </li>
-<li class="toc-item toc-backmatter active"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
+<li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
-<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="backmatter" id="backmatter"><nav class="summary-links"><ul><li><a href="backmatter-2.html" class="internal"><span class="title">Colophon</span></a></li></ul></nav><div class="autopermalink" data-description="Back Matter: Backmatter"><a href="#backmatter" title="Copy heading and permalink for Back Matter: Backmatter" aria-label="Copy heading and permalink for Back Matter: Backmatter">🔗</a></div></section></div>
+<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="exercises" id="welcome-exercises"><h2 class="heading hide-type">
+<span class="type">Exercises</span><span class="space"> </span><span class="codenumber">1.4</span><span class="space"> </span><span class="title">Exercises</span>
+</h2>
+<article class="exercise exercise-like" id="welcome-exercises-2"><h3 class="heading"><span class="codenumber">1<span class="period">.</span></span></h3>
+<div class="para" id="welcome-exercises-2-1-1">Suppose we break up the circle in a different way, say into <span class="process-math">\(n\)</span> equal sectors. We then arrange them in an alternating pattern. The case where <span class="process-math">\(n=4\)</span> is shown below.<div class="autopermalink" data-description="Paragraph"><a href="#welcome-exercises-2-1-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div> <ol class="lower-alpha lower-alpha-level-1" id="welcome-exercises-2-1-2">
+<li id="welcome-exercises-2-1-2-1">
+<div class="para" id="p-derived-welcome-exercises-2-1-2-1">Sketch the arrangement for <span class="process-math">\(n=8\text{.}\)</span>
+</div>
+<div class="autopermalink" data-description="Item 1.4.1.a"><a href="#welcome-exercises-2-1-2-1" title="Copy heading and permalink for Item 1.4.1.a" aria-label="Copy heading and permalink for Item 1.4.1.a">🔗</a></div>
+</li>
+<li id="welcome-exercises-2-1-2-2">
+<div class="para" id="p-derived-welcome-exercises-2-1-2-2">What happens as <span class="process-math">\(n\)</span> increases?</div>
+<div class="autopermalink" data-description="Item 1.4.1.b"><a href="#welcome-exercises-2-1-2-2" title="Copy heading and permalink for Item 1.4.1.b" aria-label="Copy heading and permalink for Item 1.4.1.b">🔗</a></div>
+</li>
+<li id="welcome-exercises-2-1-2-3">
+<div class="para" id="p-derived-welcome-exercises-2-1-2-3">What if we were to let <span class="process-math">\(n\)</span> approach infinity? What shape do you think we would get?</div>
+<div class="autopermalink" data-description="Item 1.4.1.c"><a href="#welcome-exercises-2-1-2-3" title="Copy heading and permalink for Item 1.4.1.c" aria-label="Copy heading and permalink for Item 1.4.1.c">🔗</a></div>
+</li>
+<li id="welcome-exercises-2-1-2-4">
+<div class="para" id="p-derived-welcome-exercises-2-1-2-4">How does the case of infinitely many infinitely thin sectors give us the area of the circle?</div>
+<div class="autopermalink" data-description="Item 1.4.1.d"><a href="#welcome-exercises-2-1-2-4" title="Copy heading and permalink for Item 1.4.1.d" aria-label="Copy heading and permalink for Item 1.4.1.d">🔗</a></div>
+</li>
+</ol>
+<div class="autopermalink" data-description="Exercise 1.4.1"><a href="#welcome-exercises-2" title="Copy heading and permalink for Exercise 1.4.1" aria-label="Copy heading and permalink for Exercise 1.4.1">🔗</a></div></article><div class="autopermalink" data-description="Exercises 1.4: Exercises"><a href="#welcome-exercises" title="Copy heading and permalink for Exercises 1.4: Exercises" aria-label="Copy heading and permalink for Exercises 1.4: Exercises">🔗</a></div></section></div>
 <div id="ptx-content-footer" class="ptx-content-footer">
-<a class="previous-button button" href="welcome-exercises.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="backmatter-2.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
+<a class="previous-button button" href="welcome-reading-questions.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="backmatter.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
 </div>
 <div id="ptx-page-footer" class="ptx-page-footer">
