--- a/welcome-sec-what-is-calculus.html
+++ b/welcome-sec-what-is-calculus.html
@@ -129,7 +129,7 @@ eBookConfig.enable_chatcodes =  false;
 <ol id="searchresults" class="searchresults"></ol>
 </div>
 </div>
-<span class="nav-other-controls"><button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="welcome.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="welcome.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="welcome-reading-questions.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
+<span class="nav-other-controls"><button id="light-dark-button" class="light-dark-button button" title="Dark Mode"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe51c;</span><span class="name">Dark Mode</span></button></span><span class="treebuttons"><a class="previous-button button" href="welcome.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="welcome.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="welcome-sec-a-motivating-example.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
 </div></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\newcommand{\N}{\mathbb N}
 \newcommand{\Z}{\mathbb Z}
 \newcommand{\Q}{\mathbb Q}
@@ -148,7 +148,9 @@ eBookConfig.enable_chatcodes =  false;
 <div class="toc-title-box"><a href="welcome.html" class="internal"><span class="codenumber">1</span> <span class="title">Welcome to calculus!</span></a></div>
 <ul class="structural toc-item-list contains-active">
 <li class="toc-item toc-section active"><div class="toc-title-box"><a href="welcome-sec-what-is-calculus.html" class="internal"><span class="codenumber">1.1</span> <span class="title">What is calculus?</span></a></div></li>
-<li class="toc-item toc-reading-questions"><div class="toc-title-box"><a href="welcome-reading-questions.html" class="internal"><span class="codenumber">1.2</span> <span class="title">Check your understanding</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="welcome-sec-a-motivating-example.html" class="internal"><span class="codenumber">1.2</span> <span class="title">A motivating example</span></a></div></li>
+<li class="toc-item toc-reading-questions"><div class="toc-title-box"><a href="welcome-reading-questions.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Check your understanding</span></a></div></li>
+<li class="toc-item toc-exercises"><div class="toc-title-box"><a href="welcome-exercises.html" class="internal"><span class="codenumber">1.4</span> <span class="title">Exercises</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
@@ -156,7 +158,7 @@ eBookConfig.enable_chatcodes =  false;
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="welcome-sec-what-is-calculus"><h2 class="heading hide-type">
 <span class="type">Section</span><span class="space"> </span><span class="codenumber">1.1</span><span class="space"> </span><span class="title">What is calculus?</span>
 </h2>
-<div class="para" id="welcome-sec-what-is-calculus-2">Much of the geometry you’ve studied before relies on straight lines and flat shapes. You can find the slope of a line, the perimeter of a polygon, or the area of a rectangle using simple, well-known formulas. But many of the shapes we encounter in the real world aren’t straight — they’re curved. Calculus extends the tools of geometry and algebra to help us reason about these more complex, curved situations.<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-what-is-calculus-2" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+<div class="para" id="welcome-sec-what-is-calculus-2">Much of the geometry you’ve studied before relies on shapes made up of straight lines and flat surfaces. For example, the perimeter of a rectangle is simply the sum of its sides, and the area is the product of its length and width. These formulas are straightforward because they deal with simple shapes. But what about more complex shapes, like curves or surfaces that aren’t flat? How do we measure things like the length of a curve or the area under a wavy line?<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-what-is-calculus-2" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
 </div>
 <div class="para" id="welcome-sec-what-is-calculus-3">Here’s how the ideas you already know begin to generalize when we introduce calculus:<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-what-is-calculus-3" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
 </div>
@@ -186,29 +188,11 @@ eBookConfig.enable_chatcodes =  false;
 <td class="l m b0 r0 l0 t0 lines">Adding infinitely many tiny pieces</td>
 </tr>
 </table></div>
-<div class="para" id="welcome-sec-what-is-calculus-5">Consider the parabola given by <span class="process-math">\(y = 2x - x^2\)</span> from <span class="process-math">\(x = 0\)</span> to <span class="process-math">\(x = 2\text{.}\)</span> Unlike the perimeter of a rectangle or the length of a straight segment, there’s no obvious formula to plug into. So how could we even begin?<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-what-is-calculus-5" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
-</div>
-<div class="image-box" style="width: 60%; margin-left: 20%; margin-right: 20%;"><img src="generated/prefigure/prefigure-rectangle.svg" role="img" class="contained"></div>
-<div class="para" id="welcome-sec-what-is-calculus-7">One natural idea is to approximate the curve using straight lines. If we connect a few points on the graph with line segments, we can estimate the total length by adding up the lengths of those segments.<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-what-is-calculus-7" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
-</div>
-<div class="image-box" style="width: 60%; margin-left: 20%; margin-right: 20%;"><img src="generated/prefigure/prefigure-curve-approximation.svg" role="img" class="contained"></div>
-<div class="para" id="welcome-sec-what-is-calculus-9">In the figure above, we connect the points <span class="process-math">\((0,0)\text{,}\)</span> <span class="process-math">\((1,1)\text{,}\)</span> and <span class="process-math">\((2,0)\)</span> with line segments. The total length of these segments gives us an estimate of the arc length of the curve from <span class="process-math">\(x = 0\)</span> to <span class="process-math">\(x = 2\text{:}\)</span><div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-what-is-calculus-9" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
-</div>
-<div class="para logical" id="welcome-sec-what-is-calculus-10">
-<div class="displaymath process-math">
-\begin{equation*}
-\text{Length} \approx \sqrt{(1-0)^2 + (1-0)^2} + \sqrt{(2-1)^2 + (0-1)^2} = \sqrt{2} + \sqrt{2} = 2\sqrt{2} \approx 2.828
-\end{equation*}
-</div>
-<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-what-is-calculus-10" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
-</div>
-<div class="para" id="welcome-sec-what-is-calculus-11">And if we use more points — say, ten instead of three — the estimate gets better. Each line segment becomes a closer approximation of the curve.<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-what-is-calculus-11" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
-</div>
-<div class="para" id="welcome-sec-what-is-calculus-12">Now imagine continuing this process with more and more points, each one closer to the next. The curve starts to look like it’s made up of infinitely many tiny pieces, each nearly straight. If we could somehow add up the lengths of all those infinitesimal segments, we’d get the exact arc length. But what does it mean to add up infinitely many infinitesimal pieces? That question is the starting point of calculus, which gives us the tools to reason precisely about these infinitesimal quantities.<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-what-is-calculus-12" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+<div class="para" id="welcome-sec-what-is-calculus-5">Calculus lets us extend these familiar ideas to more complex situations by making use of the concept of infinitesimals — quantities that are so small they can be thought of as ‘infinitely close to zero.’ By breaking down complex shapes and processes into these infinitesimal pieces, we can apply the same principles that work for simple shapes to more complicated ones.<div class="autopermalink" data-description="Paragraph"><a href="#welcome-sec-what-is-calculus-5" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
 </div>
 <div class="autopermalink" data-description="Section 1.1: What is calculus?"><a href="#welcome-sec-what-is-calculus" title="Copy heading and permalink for Section 1.1: What is calculus?" aria-label="Copy heading and permalink for Section 1.1: What is calculus?">🔗</a></div></section></div>
 <div id="ptx-content-footer" class="ptx-content-footer">
-<a class="previous-button button" href="welcome.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="welcome-reading-questions.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
+<a class="previous-button button" href="welcome.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="welcome-sec-a-motivating-example.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
 </div>
 <div id="ptx-page-footer" class="ptx-page-footer">
