--- a/welcome.html
+++ b/welcome.html
@@ -148,7 +148,9 @@ eBookConfig.enable_chatcodes =  false;
 <div class="toc-title-box"><a href="welcome.html" class="internal"><span class="codenumber">1</span> <span class="title">Welcome to calculus!</span></a></div>
 <ul class="structural toc-item-list active">
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="welcome-sec-what-is-calculus.html" class="internal"><span class="codenumber">1.1</span> <span class="title">What is calculus?</span></a></div></li>
-<li class="toc-item toc-reading-questions"><div class="toc-title-box"><a href="welcome-reading-questions.html" class="internal"><span class="codenumber">1.2</span> <span class="title">Check your understanding</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="welcome-sec-a-motivating-example.html" class="internal"><span class="codenumber">1.2</span> <span class="title">A motivating example</span></a></div></li>
+<li class="toc-item toc-reading-questions"><div class="toc-title-box"><a href="welcome-reading-questions.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Check your understanding</span></a></div></li>
+<li class="toc-item toc-exercises"><div class="toc-title-box"><a href="welcome-exercises.html" class="internal"><span class="codenumber">1.4</span> <span class="title">Exercises</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
@@ -156,15 +158,14 @@ eBookConfig.enable_chatcodes =  false;
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="chapter" id="welcome"><h2 class="heading">
 <span class="type">Chapter</span><span class="space"> </span><span class="codenumber">1</span><span class="space"> </span><span class="title">Welcome to calculus!</span>
 </h2>
-<section class="introduction" id="welcome-2"><div class="para" id="welcome-2-1">
-<em class="emphasis">Welcome to the world of calculus!</em><div class="autopermalink" data-description="Paragraph"><a href="#welcome-2-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+<section class="introduction" id="welcome-2"><div class="para" id="welcome-2-1">Calculus is a fascinating branch of mathematics that allows us to understand and describe change in the world around us. This opening chapter introduces the core ideas that will guide our journey through calculus: how breaking things into tiny pieces can help us describe the world with remarkable precision.<div class="autopermalink" data-description="Paragraph"><a href="#welcome-2-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
 </div>
-<div class="para" id="welcome-2-2">TThis opening chapter introduces the core ideas that will guide our journey: how breaking things into tiny pieces can help us describe the world with remarkable precision.<div class="autopermalink" data-description="Paragraph"><a href="#welcome-2-2" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
-</div>
-<div class="para" id="welcome-2-3">The goal of this chapter is to build intuition for the central ideas that drive calculus. Before introducing any formal definitions, we’ll explore how familiar formulas arise from simpler pieces, and why those pieces, when understood correctly, can unlock powerful methods for understanding the world around us.<div class="autopermalink" data-description="Paragraph"><a href="#welcome-2-3" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+<div class="para" id="welcome-2-2">The goal of this chapter is to build intuition for the central ideas that drive calculus. Before introducing any formal definitions, we’ll explore how familiar formulas arise from simpler pieces, and why those pieces, when understood correctly, can unlock powerful methods for understanding the world around us.<div class="autopermalink" data-description="Paragraph"><a href="#welcome-2-2" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
 </div></section><nav class="summary-links"><ul>
 <li><a href="welcome-sec-what-is-calculus.html" class="internal"><span class="codenumber">1.1</span> <span class="title">What is calculus?</span></a></li>
-<li><a href="welcome-reading-questions.html" class="internal"><span class="codenumber">1.2</span> <span class="title">Check your understanding</span></a></li>
+<li><a href="welcome-sec-a-motivating-example.html" class="internal"><span class="codenumber">1.2</span> <span class="title">A motivating example</span></a></li>
+<li><a href="welcome-reading-questions.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Check your understanding</span></a></li>
+<li><a href="welcome-exercises.html" class="internal"><span class="codenumber">1.4</span> <span class="title">Exercises</span></a></li>
 </ul></nav><div class="autopermalink" data-description="Chapter 1: Welcome to calculus!"><a href="#welcome" title="Copy heading and permalink for Chapter 1: Welcome to calculus!" aria-label="Copy heading and permalink for Chapter 1: Welcome to calculus!">🔗</a></div></section></div>
 <div id="ptx-content-footer" class="ptx-content-footer">
 <a class="previous-button button" href="front-colophon.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="welcome-sec-what-is-calculus.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
